Fixs transiscope theme on mobile

--- a/src/scss/components/map/_map-controls.scss
+++ b/src/scss/components/map/_map-controls.scss
@@ -96,7 +96,7 @@ a.leaflet-control-zoom-out {
   width: 35px;
   height: 35px;
   object-fit: contain;
-  margin-top: 3px;
+  margin-top: 7px;
   display: none;
 }
 
